base/024-vd-execution/fuse-024-vd-execution-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  creationTimestamp: ~
  labels: 
    app: vd-execution
  name: vd-execution
spec: 
  replicas: 3
  selector: 
    matchLabels: 
      app: vd-execution
  strategy: {}
  template: 
    metadata: 
      creationTimestamp: ~
      labels: 
        app: vd-execution
    spec: 
      containers: 
        - 
          securityContext:
            privileged: false
          imagePullPolicy: IfNotPresent
          terminationMessagePolicy: File
          image: "docker.prospecta.com/prospecta/mdo-vd-execution:development"
          name: vd-execution
          ports:
            - name: spring-port
              containerPort: 8080
              protocol: TCP
          resources: {}
      securityContext: {}
      imagePullSecrets:
        - name: nexus-image-pull
---
