base/024-vd-execution/fuse-024-vd-execution-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: vd-execution
  name: vd-execution
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: vd-execution
---
